# AI-ChatBot-Uni

./: .gitignore  LICENSE  README.md  idea.md
Golden_Standard/: .env  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
Golden_Standard/src/db/: campus_map_rows.sql  colleges_rows.sql  config_rows.sql  days_rows.sql  documents_rows.sql  faq_responses_rows.sql  faq_tags_rows.sql  locker_hours_rows.sql  match_documents_sql.sql  time_ranges_rows.sql
Golden_Standard/src/resources/: data.txt  locker_hours.txt  map_data.txt  servery_hours.txt
Golden_Standard/src/uni_ai_chatbot/: campus_map_data.py  faq_responses.json  handbook_loader.py  locker_hours_loader.py  migration_script.py  resources.py  servery_hours_loader.py  telegram_bot.py
Golden_Standard/src/uni_ai_chatbot/bot/: callbacks.py  commands.py  conversation.py  location_handlers.py  main.py
Golden_Standard/src/uni_ai_chatbot/configurations/: config.py
Golden_Standard/src/uni_ai_chatbot/data/: campus_map_data.py  handbook_loader.py  handbook_processor.py  locker_hours_loader.py  resources.py  servery_hours_loader.py
Golden_Standard/src/uni_ai_chatbot/scripts/: init_setup.py  preprocess_documents.py  preprocess_supabase.py  setup_pgvector.py  update_script.py  update_supabase.py
Golden_Standard/test_scripts/: check_token_usage.sh  find_bot_instances.sh  reset_bot.sh
RAG Module/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
RAG Module/src/resources/: data.txt
RAG Module/src/uni_ai_chatbot/: main.py  resources.py
artifacts/: Readme.md
(+16 files in other folders)
